<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fightclub"
    android:orientation="vertical"
    tools:context=".Fight">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/field"
        android:layout_width="0dp"
        android:layout_height="289dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthdisplay"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/enemypicture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="175dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/enemypicture"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/player"
            app:layout_constraintEnd_toEndOf="@+id/won"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/won"
            app:layout_constraintTop_toTopOf="@+id/player"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/zombieidle" />

        <TextView
            android:id="@+id/won"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />

        <ImageView
            android:id="@+id/player"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/playerpicture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/won"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/won"
            app:layout_constraintTop_toBottomOf="@+id/won"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/swordswing" />

        <ImageView
            android:id="@+id/enemyhitanimation"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/hiteffectonenemy"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/enemypicture"
            app:layout_constraintEnd_toEndOf="@+id/enemypicture"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="@+id/enemypicture"
            app:layout_constraintTop_toTopOf="@+id/enemypicture"
            app:layout_constraintVertical_bias="0.362"
            app:srcCompat="@drawable/hit" />

        <ImageView
            android:id="@+id/playerhitanimation"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/hiteffectonplayer"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/player"
            app:layout_constraintEnd_toEndOf="@+id/player"
            app:layout_constraintHorizontal_bias="0.233"
            app:layout_constraintStart_toStartOf="@+id/player"
            app:layout_constraintTop_toTopOf="@+id/player"
            app:layout_constraintVertical_bias="0.358"
            app:srcCompat="@drawable/hit" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/controls"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field">

        <Button
            android:id="@+id/Buttonhit"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="hit"
            android:text="@string/attack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/Continue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:onClick="exit"
            android:text="@string/continuebtn"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Buttonhit"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Buttonhit"
            app:layout_constraintTop_toBottomOf="@+id/Buttonhit"
            app:layout_constraintVertical_bias="0.445">

            <Button
                android:id="@+id/buttonbag"
                style="@style/?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="bag"
                android:padding="0dp"
                android:text="@string/bag"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="87dp" />

            <Button
                android:id="@+id/buttonrun"
                style="@style/?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="runaway"
                android:text="@string/run"
                tools:layout_editor_absoluteX="216dp"
                tools:layout_editor_absoluteY="79dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/healthdisplay"
        android:layout_width="0dp"
        android:layout_height="121dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtplayerhealth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/playerhealth"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="@+id/playerhealth"
            app:layout_constraintTop_toBottomOf="@+id/playerhealth" />

        <ProgressBar
            android:id="@+id/playerhealth"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/VSlayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/VSlayout"
            app:layout_constraintTop_toTopOf="@+id/VSlayout" />

        <TextView
            android:id="@+id/playername"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/playerhealth"
            app:layout_constraintEnd_toEndOf="@+id/playerhealth"
            app:layout_constraintStart_toStartOf="@+id/playerhealth"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/VSlayout"
            android:layout_width="54dp"
            android:layout_height="39dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/vs"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />

        <TextView
            android:id="@+id/enemyname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/enemyhealth"
            app:layout_constraintEnd_toEndOf="@+id/enemyhealth"
            app:layout_constraintStart_toStartOf="@+id/enemyhealth"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/enemyhealth"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/VSlayout"
            app:layout_constraintEnd_toStartOf="@+id/VSlayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/VSlayout"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtenemyhealth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/enemyhealth"
            app:layout_constraintStart_toStartOf="@+id/enemyhealth"
            app:layout_constraintTop_toBottomOf="@+id/enemyhealth" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>